--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//WebContent/Footer.jsp=UTF-8
 encoding//WebContent/Header.jsp=UTF-8
+encoding//WebContent/Main.jsp=UTF-8
 encoding//WebContent/Nav.jsp=UTF-8
+encoding//WebContent/loginPro.jsp=UTF-8
 encoding/<project>=UTF-8
