--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,16 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <servlet>
-  	<servlet-name>MainTemplate</servlet-name>
-  	<servlet-class>controller.MainTemplate</servlet-class>
-  	<init-param>
-  		<param-name>propertyConfig</param-name>
-  		<param-value>/WEB-INF/CommandT.properties</param-value>
-  	</init-param>
+    <servlet-name>MainTemplate</servlet-name>
+    <servlet-class>controller.MainTemplate</servlet-class>
+    <init-param>
+      <param-name>propertyConfig</param-name>
+      <param-value>/WEB-INF/CommandT.properties</param-value>
+    </init-param>
   </servlet>
-  
   <servlet-mapping>
-  	<servlet-name>MainTemplate</servlet-name>
-  	<url-pattern>*.do</url-pattern>
+    <servlet-name>MainTemplate</servlet-name>
+    <url-pattern>*.do</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>Calendar</servlet-name>
+    <servlet-class>controller.Calendar</servlet-class>
+    <init-param>
+      <param-name>calPropertyConfig</param-name>
+      <param-value>/WEB-INF/Calendar.properties</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Calendar</servlet-name>
+    <url-pattern>*.cal</url-pattern>
+  </servlet-mapping>
+  
+  <security-constraint>
+    <display-name>JSP Protection</display-name>
+    <web-resource-collection>
+      <web-resource-name>SequreJSPPages</web-resource-name>
+      <url-pattern>*.jsp</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>nobody</role-name>
+    </auth-constraint>
+  </security-constraint>
+  <security-role>
+    <description>
+  Nobody should be in this role so JSP files are protected from direct access.
+  </description>
+    <role-name>nobody</role-name>
+  </security-role>
+  <resource-ref>
+    <description>skhuclub db</description>
+    <res-ref-name>jdbc/skhuclub</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
