--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -2,3 +2,6 @@ main.do=action.MainAction
 login.do=action.LoginProAction
 logout.do=action.LogoutAction
 schedule.do=action.ScheduleAction
+board.do=action.BoardAction
+boardWrite.do=action.BoardWriteAction
+boardInsert.do=action.BoardInsertAction
