--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,4 +4,5 @@ encoding//WebContent/Header.jsp=UTF-8
 encoding//WebContent/Main.jsp=UTF-8
 encoding//WebContent/Nav.jsp=UTF-8
 encoding//WebContent/loginPro.jsp=UTF-8
+encoding//WebContent/signUp.jsp=UTF-8
 encoding/<project>=UTF-8
