--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -2,3 +2,4 @@ main.do=action.MainAction
 login.do=action.LoginProAction
 logout.do=action.LogoutAction
 schedule.do=action.ScheduleAction
+signUp.do=action.SignUpAction
