게시판 수정,삭제 추가

--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -3,7 +3,11 @@ login.do=action.LoginProAction
 logout.do=action.LogoutAction
 schedule.do=action.ScheduleAction
 signUp.do=action.SignUpAction
-board.do=action.BoardAction
-boardWrite.do=action.BoardWriteAction
-boardInsert.do=action.BoardInsertAction
+board.do=board.BoardAction
+boardWrite.do=board.BoardWriteAction
+boardInsert.do=board.BoardInsertAction
+boardView.do=board.BoardViewAction
+boardUpdate.do=board.BoardUpdateAction
+boardUpdateSuccess.do=board.BoardUpdateSuccessAction
+boardDelete.do=board.BoardDeleteAction
 
