게시판 검색 추가

--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -10,4 +10,4 @@ boardView.do=board.BoardViewAction
 boardUpdate.do=board.BoardUpdateAction
 boardUpdateSuccess.do=board.BoardUpdateSuccessAction
 boardDelete.do=board.BoardDeleteAction
-
+boardSearch.do=board.BoardSearchAction
