동아리 소개 틀

--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -3,6 +3,9 @@ login.do=action.LoginProAction
 logout.do=action.LogoutAction
 schedule.do=action.ScheduleAction
 signUp.do=action.SignUpAction
+introduce.do=action.IntroduceAction
+
+
 board.do=board.BoardAction
 boardWrite.do=board.BoardWriteAction
 boardInsert.do=board.BoardInsertAction
