업로드, 다운로드 추가

--- a/WebContent/WEB-INF/Ajax.properties
+++ b/WebContent/WEB-INF/Ajax.properties
@@ -5,3 +5,4 @@ delete.aj=calendar.DeleteCalendarAction
 select.aj=calendar.SelectCalendarAction
 commentWrite.aj=comment.CommentWriteAction
 commentDelete.aj=comment.CommentDeleteAction
+fileDownload.aj=board.FileDownloadAction
