게시판 스마트에디터 추가

--- a/WebContent/WEB-INF/Ajax.properties
+++ b/WebContent/WEB-INF/Ajax.properties
@@ -6,3 +6,4 @@ select.aj=calendar.SelectCalendarAction
 commentWrite.aj=comment.CommentWriteAction
 commentDelete.aj=comment.CommentDeleteAction
 fileDownload.aj=board.FileDownloadAction
+photo.aj=board.PhotoAction
