정보수정 완료

--- a/WebContent/WEB-INF/Ajax.properties
+++ b/WebContent/WEB-INF/Ajax.properties
@@ -7,3 +7,4 @@ commentWrite.aj=comment.CommentWriteAction
 commentDelete.aj=comment.CommentDeleteAction
 fileDownload.aj=board.FileDownloadAction
 photo.aj=board.PhotoAction
+memberModify.aj=member.MemberModifyAction
