회원가입 정보 디비에 연결하는중

--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -15,3 +15,5 @@ boardUpdateSuccess.do=board.BoardUpdateSuccessAction
 boardDelete.do=board.BoardDeleteAction
 boardSearch.do=board.BoardSearchAction
 myPage.do=member.MyPageMainAction
+
+insertMember.do=member.InsertMemberAction
