--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//WebContent/Nav.jsp=UTF-8
 encoding//WebContent/boardUpdate.jsp=UTF-8
 encoding//WebContent/introduce.jsp=UTF-8
+encoding//WebContent/signUp.jsp=UTF-8
 encoding/<project>=UTF-8
