동아리 생성 추가, 동아리 리스트 구현

--- a/WebContent/WEB-INF/Ajax.properties
+++ b/WebContent/WEB-INF/Ajax.properties
@@ -8,3 +8,5 @@ commentDelete.aj=comment.CommentDeleteAction
 fileDownload.aj=board.FileDownloadAction
 photo.aj=board.PhotoAction
 memberModify.aj=member.MemberModifyAction
+addClub.aj=club.AddClubAction
+clubList.aj=club.ClubListAction
