--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -21,5 +21,6 @@ insertMember.do=member.InsertMemberAction
 application.do=apply.ApplicationAction
 insertApplication.do=apply.InsertApplicationAction
 
-
+clubExplain.do=club.ClubExplainAction
+insertClubExplain.do=club.InsertClubExplainAction
 clubList.do=club.ClubListAction
