지원서 보기 추가

--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -19,9 +19,12 @@ signUp.do=action.SignUpAction
 insertMember.do=member.InsertMemberAction
 
 application.do=apply.ApplicationAction
+applicationManagement.do=apply.ApplicationManagementAction
 insertApplication.do=apply.InsertApplicationAction
 
 clubExplain.do=club.ClubExplainAction
 insertClubExplain.do=club.InsertClubExplainAction
 
 clubList.do=club.ClubListAction
+
+
