--- a/WebContent/WEB-INF/Ajax.properties
+++ b/WebContent/WEB-INF/Ajax.properties
@@ -10,3 +10,4 @@ photo.aj=board.PhotoAction
 memberModify.aj=member.MemberModifyAction
 addClub.aj=club.AddClubAction
 overlap.aj=member.IdOverlapAction
+applyDelete.aj=apply.ApplicationDeleteAction
