회원 지원서 관리, 회원 지원서 삭제 기능 추가

--- a/WebContent/WEB-INF/Ajax.properties
+++ b/WebContent/WEB-INF/Ajax.properties
@@ -10,4 +10,5 @@ photo.aj=board.PhotoAction
 memberModify.aj=member.MemberModifyAction
 addClub.aj=club.AddClubAction
 overlap.aj=member.IdOverlapAction
-applyDelete.aj=apply.ApplicationDeleteAction
+applicationDelete.aj=apply.ApplicationDeleteAction
+applyDelete.aj=apply.ApplyDeleteAction
