--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -20,6 +20,7 @@ insertMember.do=member.InsertMemberAction
 
 application.do=apply.ApplicationAction
 applicationManagement.do=apply.ApplicationManagementAction
+applyManagement.do=apply.ApplyManagementAction
 insertApplication.do=apply.InsertApplicationAction
 
 clubExplain.do=club.ClubExplainAction
