사용자 지원서관리 모달

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//WebContent/Nav.jsp=UTF-8
 encoding//WebContent/application.jsp=UTF-8
 encoding//WebContent/applicationManagement.jsp=UTF-8
 encoding//WebContent/applyDetail.jsp=UTF-8
+encoding//WebContent/applyManagement.jsp=UTF-8
 encoding//WebContent/boardUpdate.jsp=UTF-8
 encoding//WebContent/clubExplain.jsp=UTF-8
 encoding//WebContent/introduce.jsp=UTF-8
