applyBean  applyData / 지원서수정 저장 디비연동

--- a/WebContent/WEB-INF/Ajax.properties
+++ b/WebContent/WEB-INF/Ajax.properties
@@ -12,3 +12,4 @@ addClub.aj=club.AddClubAction
 overlap.aj=member.IdOverlapAction
 applicationDelete.aj=apply.ApplicationDeleteAction
 applyDelete.aj=apply.ApplyDeleteAction
+applyUpdate.aj=apply.ApplyUpdateAction
