--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,6 +7,7 @@ encoding//WebContent/applyDetail.jsp=UTF-8
 encoding//WebContent/applyManagement.jsp=UTF-8
 encoding//WebContent/boardUpdate.jsp=UTF-8
 encoding//WebContent/clubExplain.jsp=UTF-8
+encoding//WebContent/clubList.jsp=UTF-8
 encoding//WebContent/introduce.jsp=UTF-8
 encoding//WebContent/signUp.jsp=UTF-8
 encoding/<project>=UTF-8
