동아리 생성 추가중

--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -28,5 +28,5 @@ clubExplain.do=club.ClubExplainAction
 insertClubExplain.do=club.InsertClubExplainAction
 
 clubList.do=club.ClubListAction
-
+addClub.do=club.AddClubAction
 
