동아리 추가 추가

--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -29,4 +29,5 @@ insertClubExplain.do=club.InsertClubExplainAction
 
 clubList.do=club.ClubListAction
 addClub.do=club.AddClubAction
+clubInsert.do=club.ClubInsertAction
 
