회원관리 추가

--- a/WebContent/WEB-INF/CommandT.properties
+++ b/WebContent/WEB-INF/CommandT.properties
@@ -3,6 +3,7 @@ login.do=action.LoginProAction
 logout.do=action.LogoutAction
 schedule.do=action.ScheduleAction
 introduce.do=action.IntroduceAction
+memberManagement.do=member.MemberManagementAction
 
 
 board.do=board.BoardAction
