--- a/WebContent/WEB-INF/Ajax.properties
+++ b/WebContent/WEB-INF/Ajax.properties
@@ -13,3 +13,5 @@ overlap.aj=member.IdOverlapAction
 applicationDelete.aj=apply.ApplicationDeleteAction
 applyDelete.aj=apply.ApplyDeleteAction
 applyUpdate.aj=apply.ApplyUpdateAction
+memberAuthModify.aj=member.MemberAuthModifyAction
+memberDelete.aj=member.MemberDeleteAction
