회원관리 틀 정리

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,5 +10,6 @@ encoding//WebContent/boardUpdate.jsp=UTF-8
 encoding//WebContent/clubExplain.jsp=UTF-8
 encoding//WebContent/clubList.jsp=UTF-8
 encoding//WebContent/introduce.jsp=UTF-8
+encoding//WebContent/memberManagement.jsp=UTF-8
 encoding//WebContent/signUp.jsp=UTF-8
 encoding/<project>=UTF-8
